Create Footer Section.

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -261,3 +261,16 @@
   display: contents;
 }
 ///////       End Sponsor Section   /////////////
+
+//////////// Footer Section       //////////////
+
+.social {
+  transform: translateX(6px);
+}
+
+.instagram-img {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+///////////// End Footer Section  ////////////
