--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -274,3 +274,18 @@
 }
 
 ///////////// End Footer Section  ////////////
+
+// Search inputs style
+#searchResults,
+#searchResults2 {
+  background-color: black;
+  position: absolute;
+  top: 6.6rem;
+  z-index: 1;
+  margin-left: 6rem;
+  list-style-type: none;
+  color: white;
+  padding-left: unset;
+  border: 1px solid rgb(192, 192, 192, 0.6);
+  width: 360px;
+}
